# scuffed-crew

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Containerfile  Dioxus.toml  LICENSE-MIT  MAIN-COMMITS-TO-REIMPLEMENT.md  README.md  brief.md  compose.yml  design.md  index.html  package-lock.json  package.json  propaganda.html  tailwind.css
crates/admin/: Cargo.toml  Trunk.toml  index.html
crates/admin/src/: api.rs  app.rs  guards.rs  lib.rs  state.rs
crates/admin/src/components/: confirm_dialog.rs  data_table.rs  form_modal.rs  forms.rs  mod.rs  sidebar.rs  status_pill.rs
crates/admin/src/pages/: announcements.rs  applications.rs  audit_log.rs  dashboard.rs  games.rs  matches.rs  members.rs  mod.rs  schedule.rs  settings.rs  teams.rs  tournaments.rs
crates/api-client/: Cargo.toml
crates/api-client/src/: lib.rs  native_impl.rs  web_impl.rs
crates/app/: Cargo.toml  index.html
crates/app/assets/: desktop_canvas.js  tailwind.css
crates/app/src/: keybindings.rs  lib.rs  main.rs  routes.rs  theme.rs  util.rs
crates/app/src/canvas/: layers.rs  mod.rs  renderer.rs  tile_manager.rs  tools.rs
crates/app/src/components/: admin_shared.rs  charts.rs  mod.rs  modal.rs  section_header.rs  toast.rs
crates/app/src/hooks/: api.rs  mod.rs  modal.rs
crates/app/src/layouts/: admin.rs  mod.rs  public.rs  strategy.rs
crates/app/src/pages/: apply.rs  blog.rs  blog_article.rs  blog_post.rs  community.rs  dm.rs  events.rs  feed.rs  forum.rs  forum_thread.rs  home.rs  identity.rs  leaderboards.rs  login.rs  match_detail.rs  member_profile.rs  members.rs  mod.rs  news.rs  not_found.rs  polls.rs  profile_settings.rs  public_fetch.rs  scrims.rs  setup.rs  stats.rs  stats_member.rs  stats_tokens.rs  team_page.rs  tournament.rs  tournaments.rs  wiki.rs  wiki_page.rs
crates/app/src/state/: auth.rs  collab.rs  editor.rs  mod.rs  nostr.rs  undo.rs
crates/app/src/styles/: admin.rs  common.rs  mod.rs
crates/app/src/theme/: brand.rs  mod.rs  provider.rs  tokens.rs
crates/auth/: Cargo.toml
crates/auth/src/: crypto.rs  env_flags.rs  lib.rs  nip49.rs  password.rs  types.rs
crates/auth/src/client/: api.rs  mod.rs  state.rs
crates/auth/src/server/: discord.rs  extractor.rs  google.rs  matrix.rs  mod.rs  oauth.rs  session.rs
crates/chat/: Cargo.toml
crates/chat/src/: community.rs  lib.rs  provisioning.rs
crates/chat/src/nostr/: auth.rs  encryption.rs  events.rs  groups.rs  mod.rs  relay.rs
crates/db/: Cargo.toml
crates/db/src/: client.rs  lib.rs  migrations.rs  rewrap.rs  types.rs
crates/db/src/queries/: announcements.rs  applications.rs  articles.rs  attendance.rs  audit_log.rs  channels.rs  daemon_tokens.rs  dms.rs  events.rs  forum.rs  game_accounts.rs  games.rs  matches.rs  member_settings.rs  members.rs  mod.rs  moderation.rs  nostr_keys.rs  personal_stats.rs  polls.rs  roster.rs  rsvps.rs  scrims.rs  seasons.rs  sessions.rs  settings.rs  strategies.rs  teams.rs  tournaments.rs  users.rs  wiki.rs
crates/map-pipeline/: Cargo.toml
crates/map-pipeline/src/: config.rs  floor_detect.rs  histogram.rs  lib.rs  main.rs  mesh.rs  metadata.rs  tiles.rs
crates/map-pipeline/tests/: integration.rs
crates/map-renderer/: Cargo.toml
crates/map-renderer/src/: bounds.rs  lib.rs  main.rs  plugin.rs
crates/relay-policy/: Cargo.toml
crates/relay-policy/src/: main.rs  policy.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/collab/: mod.rs  room.rs
crates/server/src/routes/: chat.rs  mod.rs  strategy.rs  ws.rs
crates/site/: Cargo.toml  Trunk.toml  index.html
crates/site-server/: Cargo.toml
crates/site-server/src/: calendar.rs  challenge_store.rs  dm_subscriber.rs  extractors.rs  lib.rs  main.rs  membership_policy.rs  nostr_rate_limit.rs  notifications.rs  rate_limit.rs  seed.rs  state.rs  test_support.rs  uploads.rs
crates/site-server/src/routes/: announcements.rs  applications.rs  articles.rs  attendance.rs  audit_log.rs  auth.rs  calendar.rs  dev.rs  events.rs  forum.rs  games.rs  integrations.rs  leaderboards.rs  matches.rs  members.rs  mod.rs  moderation.rs  nostr.rs  polls.rs  public.rs  roster.rs  rsvps.rs  scrims.rs  settings.rs  stats.rs  teams.rs  tournaments.rs  uploads.rs  wiki.rs
crates/site-server/tests/: api_integration.rs
crates/site/assets/styles/: main.css  propaganda.css
crates/site/src/: app.rs  lib.rs
crates/site/src/components/: divider.rs  mod.rs  nav.rs  section_header.rs
crates/site/src/pages/: apply.rs  home.rs  member_profile.rs  members.rs  mod.rs  news.rs  propaganda.rs  settings.rs  tournament.rs  tournaments.rs
crates/site/src/sections/: about.rs  announcements.rs  comms.rs  footer.rs  hero.rs  mod.rs  recruit.rs  schedule.rs  teams.rs  tournaments.rs
crates/stat-tracker/: Cargo.toml  README.md  build.rs  install.sh  performance-review-2026-07-13.md  review.md  workplan.md
crates/stat-tracker/assets/: scuffed-stat-tracker.desktop  scuffed-stat-tracker.service
crates/stat-tracker/examples/: accolade.rs  cell_probe.rs  dumpdb.rs  edge_ink.rs  extract.rs  phaseprobe.rs  polltick.rs  preflight.rs  probe_outcome.rs  profile.rs  resprobe.rs  rowscan.rs
crates/stat-tracker/review-archive/: README.md  fable_grok.md  fable_review.md  fable_xreview_grok_phase1.md  fable_xreview_grok_phase2.md  grok_fable.md  grok_review.md  grok_xreview_fable_phase1.md  grok_xreview_fable_phase2.md
crates/stat-tracker/scripts/: cg4_res_sweep.sh  install.sh
crates/stat-tracker/src/: capture_gate.rs  config.rs  hero_auth.rs  lib.rs  main.rs  parse.rs  setup.rs  stats.rs
crates/stat-tracker/src/capture/: mod.rs  portal.rs  wayshot.rs  x11.rs
crates/stat-tracker/src/detect/: game_running.rs  hero_portrait.rs  match_end.rs  match_start.rs  mod.rs
crates/stat-tracker/src/gui/: daemon.rs  history.rs  live_data.rs  main.rs  preview.rs  progression.rs  settings.rs  (+5 more)
crates/stat-tracker/test-data/: .gitignore  README.md
crates/stat-tracker/tests/: name_window_geometry.rs  ocr_replay_benchmark.rs  outcome_fixtures.rs  phase_fixtures.rs  player_row_fixtures.rs  team_size_fixtures.rs
(+233 files in other folders)
