[package]
name = "scuffed-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_meta = "0.8"
scuffed-auth = { path = "../auth", features = ["client"] }
scuffed-ui = { path = "../ui" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "File",
    "FileList",
    "FormData",
    "Headers",
    "HtmlInputElement",
    "Request",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "Response",
    "Url",
    "Window",
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[features]
dev-noauth = []

[lib]
crate-type = ["cdylib", "rlib"]
