[package]
name = "scuffed-app"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
scuffed-types = { path = "../types" }
scuffed-api-client = { path = "../api-client", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web-only deps
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d",
    "HtmlImageElement", "HtmlElement", "MouseEvent", "WheelEvent", "KeyboardEvent",
    "DomRect", "ImageData", "TextMetrics", "Element",
    "EventTarget", "AddEventListenerOptions",
    "Request", "RequestInit", "RequestMode", "RequestCredentials",
    "Response", "Headers", "DataTransfer", "DragEvent",
    "WebSocket", "BinaryType", "MessageEvent", "CloseEvent", "Location",
] }

# Desktop-only deps
tokio = { workspace = true, optional = true }

[features]
default = ["web"]
web = ["dioxus/web", "scuffed-api-client/web", "dep:gloo-timers"]
desktop = ["dioxus/desktop", "scuffed-api-client/native", "dep:tokio"]
