[package]
name = "scuffed-app"
version = "0.1.0"
edition = "2024"

[lib]
name = "scuffed_app"
path = "src/lib.rs"

[[bin]]
name = "scuffed-app"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
scuffed-types = { path = "../types" }
scuffed-api-client = { path = "../api-client", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
bech32 = { version = "0.11", default-features = false, features = ["alloc"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

# Web-only deps
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d",
    "HtmlImageElement", "HtmlElement", "MouseEvent", "WheelEvent", "KeyboardEvent",
    "DomRect", "ImageData", "TextMetrics", "Element",
    "EventTarget", "AddEventListenerOptions",
    "Request", "RequestInit", "RequestMode", "RequestCredentials",
    "Response", "Headers", "DataTransfer", "DragEvent",
    "WebSocket", "BinaryType", "MessageEvent", "CloseEvent", "Location",
    "FormData", "File", "Blob", "HtmlInputElement", "FileList",
] }

# Desktop-only deps
tokio = { workspace = true, optional = true }

[features]
default = ["web"]
web = ["dioxus/web", "scuffed-api-client/web", "dep:gloo-timers"]
desktop = ["dioxus/desktop", "scuffed-api-client/native", "dep:tokio"]
