[package]
license.workspace = true
name = "scuffed-auth"
version = "0.1.0"
edition = "2021"

[features]
default = []
server = [
    "dep:axum",
    "dep:axum-extra",
    "dep:oauth2",
    "dep:reqwest",
    "dep:tokio",
    "dep:tracing",
    "dep:time",
    "dep:rand",
    "dep:base64",
    "dep:argon2",
    "dep:password-hash",
    "crypto",
]
client = [
    "dep:leptos",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
    "dep:gloo-timers",
]
crypto = ["dep:blake3", "dep:aes-gcm", "dep:zeroize", "dep:rand", "dep:base64", "dep:scrypt", "dep:chacha20poly1305", "dep:bech32", "dep:hex", "dep:subtle"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde", "js"] }

# server deps
axum = { version = "0.8", optional = true }
axum-extra = { version = "0.10", features = ["cookie"], optional = true }
oauth2 = { version = "4", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["macros", "rt"], optional = true }
tracing = { version = "0.1", optional = true }
time = { version = "0.3", optional = true }
rand = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }
argon2 = { version = "0.5", optional = true }
password-hash = { version = "0.5", optional = true }

# crypto deps
blake3 = { version = "1", optional = true }
aes-gcm = { version = "0.10", optional = true }
zeroize = { version = "1", optional = true }
scrypt = { version = "0.11", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
bech32 = { version = "0.11", optional = true }
hex = { version = "0.4", optional = true }
subtle = { version = "2", optional = true }

# client deps
leptos = { version = "0.8", features = ["csr"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
], optional = true }
js-sys = { version = "0.3", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
