[package]
license.workspace = true
name = "scuffed-chat"
version = "0.1.0"
edition = "2021"
description = "Nostr chat backend: relay client, event construction, NIP-42 auth, NIP-29 groups"

[dependencies]
scuffed-db = { path = "../db" }
scuffed-auth = { path = "../auth", features = ["crypto"] }
scuffed-types = { path = "../types" }

nostr = { version = "0.44", default-features = false, features = ["std", "nip44", "nip59"] }
chrono = { version = "0.4", features = ["serde"] }
zeroize = "1"
tokio = { version = "1", features = ["sync", "time", "macros"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
