[package]
name = "scuffed-db"
version = "0.1.0"
edition = "2021"

[dependencies]
scuffed-auth = { path = "../auth", features = ["crypto"] }
surrealdb = { version = "2", features = ["kv-mem", "protocol-ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
