[package]
license.workspace = true
name = "scuffed-db"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scuffed-rewrap"
path = "src/bin/scuffed_rewrap.rs"

[dependencies]
scuffed-auth = { path = "../auth", features = ["crypto"] }
scuffed-types = { path = "../types" }
surrealdb = { version = "3", features = ["kv-mem", "protocol-ws"] }
surrealdb-types = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
secp256k1 = { version = "0.30", features = ["rand", "std"] }
rand = "0.8"
hex = "0.4"
zeroize = "1"
