[package]
license.workspace = true
name = "scuffed-map-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
scuffed-types = { path = "../types" }

# glTF loading + 3D math
gltf = { version = "1", features = ["utils", "names"] }
glam = "0.30"

# Floor detection
find_peaks = "0.1"

# Image processing + tile generation
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
fast_image_resize = "5"
rayon = "1"

# Edge adjacency
rustc-hash = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Config + serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Error handling + logging
anyhow = "1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
