[package]
name = "scuffed-site-server"
version = "0.1.0"
edition = "2024"

[dependencies]
scuffed-auth = { path = "../auth", features = ["server"] }
scuffed-db = { path = "../db" }
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tower = "0.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
